# beemessage-operation-data

./: .env.example  .gitignore  README.md  fix_fetch_metrics_complete.py  fix_plane_get.py  index.html  okr-collector.yml  okr_collector.py  pyproject.toml  run.sh  supabase-config.js
.cursor/rules/: code-structure.mdc
.github/workflows/: update.yml
bee_operation_data/: __init__.py  cli.py  common.py  config.py  github_progress.py  insights.py  okr.py  persistence.py  plane_ops.py  supabase_store.py  time_window.py
bee_operation_data/http/: __init__.py  plane.py  stripe.py
data/: improvements.json  latest.json  snapshots.json
data/weeks/: 2026-W15.json
scripts/: fetch_metrics.py  fetch_metrics.py.backup  fetch_metrics.py.backup2
supabase/migrations/: 20260414150000_init_dashboard.sql
tests/: test_common.py  test_okr.py  test_persistence.py  test_plane_ops.py  test_supabase_store.py
